# test-task-cd

./: .env.example  README.MD  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: main.py  metrics.py
app/common/: config.py
app/migration/: env.py
app/migration/versions/: 398ee35afbad_fill_test_data.py  6f935b70fa4e_init_metric_table.py
app/resources/Metric/: db_model.py  main.py
app/schemas/: metrics.py
app/services/database/: __init__.py  base.py  db_models.py  session.py
app/utils/: schema_mixins.py
provision/api/: Dockerfile
