[tool.poetry]
name = "test_task_sd"
version = "0.1.0"
description = ""
authors = ["Max Araslanov <maxim.araslanov@hrb.software>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
pydantic = "^2.4.1"
SQLAlchemy = "^2.0.21"
pydantic-settings = "^2.0.3"
alembic = "^1.12.0"
psycopg2-binary = "^2.9.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
